--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.trachax">
-
     <!-- Required permissions for Maps and internet usage -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -18,16 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrachaX"
         tools:targetApi="31">
-
+        <activity
+            android:name=".SplashActivity"
+            android:exported="false" />
         <!-- Google Maps API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY_HERE" />
-
-        <!-- Activity declarations -->
+            android:value=" AIzaSyCQTrmp95_waRucrjRFk47F7yDRyEqtt3Q" /> <!-- Activity declarations -->
         <activity
             android:name=".LogoutFragment"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".ConfirmActivityFragment"
             android:exported="true" />
@@ -35,14 +35,19 @@
             android:name=".OtpActivity"
             android:exported="false" />
         <activity
-            android:name=".ReadWriteUserDetails$UserProfileActivity"
+            android:name=".PhoneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".UserProfileActivity"
             android:exported="false" />
         <activity
             android:name=".DriverRegistrationFragment"
-            android:exported="true" />
+            android:exported="true"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".DriverDashboardActivity"
-            android:exported="false" />
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".ParentDashboardActivity"
             android:exported="false" />
@@ -57,13 +62,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
