--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,14 @@
         android:theme="@style/Theme.TrachaX"
         tools:targetApi="31">
         <activity
-            android:name=".SplashActivity"
+            android:name=".LoginUserName"
             android:exported="false" />
-        <!-- Google Maps API Key -->
+        <activity
+            android:name=".LoginOtpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="false" /> <!-- Google Maps API Key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value=" AIzaSyCQTrmp95_waRucrjRFk47F7yDRyEqtt3Q" /> <!-- Activity declarations -->
