--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.trachax">
-    <!-- Required permissions for Maps and internet usage -->
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <!-- Required permissions for Maps and Internet usage -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,18 +18,41 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TrachaX"
         tools:targetApi="31">
-        <activity
-            android:name=".LoginUserName"
-            android:exported="false" />
-        <activity
-            android:name=".LoginOtpActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SplashActivity"
-            android:exported="false" /> <!-- Google Maps API Key -->
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value=" AIzaSyCQTrmp95_waRucrjRFk47F7yDRyEqtt3Q" /> <!-- Activity declarations -->
+            android:value="YOUR_API_KEY" />
+
+        <activity
+            android:name=".ParentDashboard"
+            android:exported="false" /> <!-- Replace this with a secured method -->
+        <!-- Activity Declarations -->
+        <activity
+            android:name=".LoginRoles"
+            android:exported="false" />
+        <activity
+            android:name=".AdminDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DriverLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DriverDashboardActivity"
+            android:exported="true" /> <!-- Changed to true -->
+        <activity
+            android:name=".ParentLoginActivity"
+            android:exported="false" />
         <activity
             android:name=".LogoutFragment"
             android:exported="false"
@@ -50,18 +74,11 @@
             android:exported="true"
             tools:ignore="Instantiatable" />
         <activity
-            android:name=".DriverDashboardActivity"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".ParentDashboardActivity"
-            android:exported="false" />
-        <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
+            android:name=".AdminLoginActivity"
+            android:exported="false" /> <!-- Main Activity (Launcher) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
