--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -16,28 +15,41 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.TrachaX"
+        android:theme="@style/AppTheme"
         tools:targetApi="31">
 
-        <!--
-             TODO: Before you run your application, you need a Google Maps API key.
 
-             To get one, follow the directions here:
 
-                https://developers.google.com/maps/documentation/android-sdk/get-api-key
-
-             Once you have your API key (it starts with "AIza"), define a new property in your
-             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
-             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyBi2Vp_rNI5W04wa9OqtP6aVwj28l2q7Io" />
 
-        <activity
-            android:name=".ParentDashboard"
-            android:exported="false" /> <!-- Replace this with a secured method -->
         <!-- Activity Declarations -->
+        <activity
+            android:name=".DriverHomeActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
+            android:exported="false" />
+        <activity
+            android:name=".DriverLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShareFragment"
+            android:exported="false" />
+        <activity
+            android:name=".LogoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TermsNConditionsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VerifyOtpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MapsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ContactActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginRoles"
             android:exported="false" />
@@ -45,21 +57,11 @@
             android:name=".AdminDashboardActivity"
             android:exported="false" />
         <activity
-            android:name=".DriverLoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".DriverDashboardActivity"
-            android:exported="true" /> <!-- Changed to true -->
-        <activity
-            android:name=".ParentLoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LogoutFragment"
-            android:exported="false"
-            tools:ignore="Instantiatable" />
-        <activity
-            android:name=".ConfirmActivityFragment"
+            android:name=".ParentDashboard"
             android:exported="true" />
+        <activity
+            android:name=".ConfirmActivity"
+            android:exported="false" />
         <activity
             android:name=".OtpActivity"
             android:exported="false" />
@@ -71,23 +73,23 @@
             android:exported="false" />
         <activity
             android:name=".DriverRegistrationFragment"
-            android:exported="true"
-            tools:ignore="Instantiatable" />
+            android:exported="true" />
         <activity
             android:name=".RegisterActivity"
             android:exported="false" />
         <activity
             android:name=".AdminLoginActivity"
-            android:exported="false" /> <!-- Main Activity (Launcher) -->
+            android:exported="false" />
+        <activity
+            android:name=".ParentLoginActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
