--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,9 +22,16 @@ firebaseAppcheckPlayintegrity = "18.0.0"
 play-services-auth = "19.0.0"
 play-services-auth-api-phone = "18.1.0"
 googleAndroidLibrariesMapsplatformSecretsGradlePlugin = "2.0.1"
+google-maps = "18.1.0"
+androidx-fragment = "1.6.1"
+gridlayout = "1.0.0"
+firebaseInappmessagingDisplay = "21.0.1"
+mediationTestSuite = "3.0.0"
 
 
 [libraries]
+google-maps = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "google-maps" }
+androidx-fragment = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "androidx-fragment" }
 ccp = { module = "com.hbb20:ccp", version = "2.7.0" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -46,6 +53,9 @@ firebase-storage = { group = "com.google.firebase", name = "firebase-storage", v
 firebase-appcheck-playintegrity = { group = "com.google.firebase", name = "firebase-appcheck-playintegrity", version.ref = "firebaseAppcheckPlayintegrity" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "play-services-auth" }
 play-services-auth-api-phone = { group = "com.google.android.gms", name = "play-services-auth-api-phone", version.ref = "play-services-auth-api-phone" }
+androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
+firebase-inappmessaging-display = { group = "com.google.firebase", name = "firebase-inappmessaging-display", version.ref = "firebaseInappmessagingDisplay" }
+mediation-test-suite = { group = "com.google.android.ads", name = "mediation-test-suite", version.ref = "mediationTestSuite" }
 
 
 
