--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,16 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
+android.enableJetifier=true
 # Enables namespacing of each library's R class so that its R class includes only the
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 android.nonFinalResIds=false
+#systemProp.http.proxyHost=your.proxy.host
+#systemProp.http.proxyPort=yourProxyPort
+#systemProp.https.proxyHost=your.proxy.host
+#systemProp.https.proxyPort=yourProxyPort
+systemProp.org.gradle.internal.http.socketTimeout=300000
+systemProp.org.gradle.internal.repository.max.retries=10
+systemProp.org.gradle.internal.repository.initial.backoff=500
