this is what ive done. login

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,8 +94,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:scheme="myapp"
-                    android:host="confirm" />
+                    android:scheme="https"
+                    android:host="example.com"
+                    android:path="/confirm" />
             </intent-filter>
         </activity>
 
